Change 507 on 2000/05/03 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- Check return value of asn_recv for defined not truth
	  as on some systems the return value may be ''

Change 506 on 2000/05/03 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP::Schema (patch from Chris Ridd)
	- Fix sup to always be an array ref
	- add ->superclasses() method

Change 505 on 2000/05/03 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- Fix bug in ->unbind() where $mesg was not being passed to _sendmsg()
	- Added debug values 4 and 8 to dump with asn_dump()

Change 496 on 2000/04/27 by <gbarr@pobox.com> (Graham Barr)

	Release 0.16

Change 495 on 2000/04/18 by <gbarr@pobox.com> (Graham Barr)

	- fix Controls critical value
	- fix debug calls

Change 494 on 2000/04/18 by <gbarr@pobox.com> (Graham Barr)

	Added VirtualListView and PAged controls

Change 491 on 2000/04/17 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP::Control::Sort
	- fix typos
	- evaluate @order before deleting $self->{order}.
	  Otherwise $_[0] may become undef

Change 489 on 2000/04/12 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP
	- control option will now call ->to_asn on blessed controls

Change 488 on 2000/04/12 by <gbarr@pobox.com> (Graham Barr)

	Added Bundle::Net::LDAP

Change 487 on 2000/04/12 by <gbarr@pobox.com> (Graham Barr)

	Add HTML docs and ppd to MANIFEST

Change 486 on 2000/04/11 by <gbarr@pobox.com> (Graham Barr)

	Rename Net::LDAP::Control::sort to Net::LDAP::Control::Sort

Change 485 on 2000/04/11 by <gbarr@pobox.com> (Graham Barr)

	- Better support for LDAPv3 controls, but more to come

Change 484 on 2000/04/11 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP::Filter
	- Fix for endless loop when filter string contained \(
	- various changes to workaround perl5.6.0 bug in qw()

Change 481 on 2000/04/03 by <gbarr@pobox.com> (Graham Barr)

	Net::LDAP::LDIF
	- fix use of undef warning during global cleanup

Change 480 on 2000/04/03 by <gbarr@pobox.com> (Graham Barr)

	Integrate from asn branch
