@@ -626,7 +626,7 @@ of the ldap* command line utilities.
 Graham Barr <gbarr@pobox.com>
 
 Please report any bugs, or post any suggestions, to the perl-ldap mailing list
-<perl-ldap@mail.med.cornell.edu>
+<perl-ldap-dev@lists.sourceforge.net>
 
 =head1 COPYRIGHT
 
@@ -636,6 +636,6 @@ terms as Perl itself.
 
 =for html <hr>
 
-I<$Id: LDAP.pod,v 1.2 2000/05/04 08:42:45 gbarr Exp $>
+I<$Id: LDAP.pod,v 1.3 2000/05/09 16:09:49 gbarr Exp $>
 
 =cut
