@@ -97,7 +97,7 @@ This document is based on a document originally written by Russell Fulton
 Graham Barr <gbarr@pobox.com>
 
 Please report any bugs, or post any suggestions, to the perl-ldap mailing list
-<perl-ldap@mail.med.cornell.edu>.
+<perl-ldap-dev@lists.sourceforge.net>.
 
 =head1 COPYRIGHT
 
@@ -107,6 +107,6 @@ terms as Perl itself.
 
 =for html <hr>
 
-I<$Id: Filter.pod,v 1.1 2000/05/03 12:29:12 gbarr Exp $>
+I<$Id: Filter.pod,v 1.2 2000/05/09 16:09:49 gbarr Exp $>
 
 =cut
