@@ -77,7 +77,7 @@ method is called automatically via DESTROY when the object goes out of scope.
 Graham Barr <gbarr@pobox.com>.
 
 Please report any bugs, or post any suggestions, to the perl-ldap mailing list
-<perl-ldap@mail.med.cornell.edu>.
+<perl-ldap-dev@lists.sourceforge.net>.
 
 =head1 COPYRIGHT
 
@@ -87,6 +87,6 @@ terms as Perl itself.
 
 =for html <hr>
 
-I<$Id: LDIF.pod,v 1.1 2000/05/03 12:29:13 gbarr Exp $>
+I<$Id: LDIF.pod,v 1.2 2000/05/09 16:09:49 gbarr Exp $>
 
 =cut
