@@ -83,7 +83,7 @@ This document is based on a document originally written by Russell Fulton
 Graham Barr <gbarr@pobox.com>
 
 Please report any bugs, or post any suggestions, to the perl-ldap mailing list
-<perl-ldap@mail.med.cornell.edu>.
+<perl-ldap-dev@lists.sourceforge.net>.
 
 =head1 COPYRIGHT
 
@@ -93,6 +93,6 @@ terms as Perl itself.
 
 =for html <hr>
 
-I<$Id: Message.pod,v 1.1 2000/05/03 12:29:15 gbarr Exp $>
+I<$Id: Message.pod,v 1.2 2000/05/09 16:09:49 gbarr Exp $>
 
 =cut
